--- a/frontend/app/views/groups/_toolbar.html.erb
+++ b/frontend/app/views/groups/_toolbar.html.erb
@@ -9,7 +9,7 @@
       <div class="btn-toolbar pull-right">
         <div class="btn-group">
           <div class="btn btn-inline-form">
-            <%= link_to I18n.t("actions.delete"),
+            <%= button_to I18n.t("actions.delete"),
                         {:controller => :groups, :action => :delete, :id => @group.id},
                         :method => :post,
                         :class => "btn btn-small btn-danger delete-record",
