--- a/frontend/app/views/accessions/_toolbar.html.erb
+++ b/frontend/app/views/accessions/_toolbar.html.erb
@@ -56,7 +56,7 @@
               <% if user_can?('suppress_archival_record') %>
                 <% if @accession.suppressed %>
                   <div class="btn btn-small btn-inline-form">
-                    <%= link_to I18n.t("actions.unsuppress"),
+                    <%= button_to I18n.t("actions.unsuppress"),
                                   {:controller => :accessions, :action => :unsuppress, :id => @accession.id},
                                   :method => :post,
                                   :class => "btn btn-small unsuppress-record",
@@ -69,7 +69,7 @@
                   </div>
                 <% else %>
                   <div class="btn btn-inline-form">
-                    <%= link_to I18n.t("actions.suppress"),
+                    <%= button_to I18n.t("actions.suppress"),
                                 {:controller => :accessions, :action => :suppress, :id => @accession.id},
                                 :method => :post,
                                 :class => "btn btn-small btn-warning suppress-record",
@@ -84,7 +84,7 @@
               <% end %>
               <% if user_can?('delete_archival_record') %>
                 <div class="btn btn-inline-form">
-                  <%= link_to I18n.t("actions.delete"),
+                  <%= button_to I18n.t("actions.delete"),
                               {:controller => :accessions, :action => :delete, :id => @accession.id},
                               :method => :post,
                               :class => "btn btn-small btn-danger delete-record",
