--- a/frontend/app/views/events/_toolbar.html.erb
+++ b/frontend/app/views/events/_toolbar.html.erb
@@ -5,7 +5,7 @@
         <div class="btn-toolbar pull-right">
           <div class="btn-group">
             <div class="btn btn-inline-form">
-              <%= link_to I18n.t("actions.delete"),
+              <%= button_to I18n.t("actions.delete"),
                           {:controller => :events, :action => :delete, :id => @event.id},
                           :method => :post,
                           :class => "btn btn-small btn-danger delete-record",
