--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -25,7 +25,7 @@
      <% if custom_action_template %>
        <%= render :partial => custom_action_template %>
      <% else %>
-       <a href="#" class="btn btn-small pull-right"><%= I18n.t("actions.add") %> <%= I18n.t("#{singular}._singular") %></a>
+       <button class="btn btn-small pull-right"><%= I18n.t("actions.add") %> <%= I18n.t("#{singular}._singular") %></button>
      <% end %>
     <% end %>
 
