--- a/plugins/hello_world/frontend/views/hello_world/index.html.erb
+++ b/plugins/hello_world/frontend/views/hello_world/index.html.erb
@@ -1,9 +1,40 @@
-<h3>The world loves you so say hello</h3>
+<div class="row-fluid">
+   <div class="span3">
+   </div>
+   <div class="span9">
+     <div class="row-fluid">
+       <div class="span12">
+         <div class="record-toolbar">
+           <div class="btn-group pull-left">
+             <%= link_to I18n.t("plugins.hello_world.say_hello"), {:controller => :hello_world, :action => :new}, :class => "btn btn-small btn-primary" %>
+           </div>
+         </div>
+       </div>
+      </div>
+     <div class="record-pane">
+       <h2><%= I18n.t("plugins.hello_world.title") %></h2>
 
-<%= link_to "Say hello", :controller => :hello_world, :action => :new %>
+       <section id="who_said_hello">
+         <h3><%= I18n.t("plugins.hello_world.who_said_hello") %></h3>
+         <% if @whosaidhello.length == 0 %>
+           <%= I18n.t("plugins.hello_world.nobody")  %>
+         <% else %>
+         <table cellpadding="5">
+           <tr>
+             <th>Who</th>
+             <th>When</th>
+           </tr>
+           <% @whosaidhello.each do |who| %>
+             <tr>
+             <td><%= who['name'] %></td>
+             <td><%= who['create_time'] %></td>
+             </tr>
+           <% end %>
+         </table>
+         <% end %>
 
-<ul>
-  <% @whosaidhello.each do |who| %>
-    <li><%= who['name'] %></li>
-  <% end %>
-</ul>
+       </section>
+
+    </div>
+  </div>
+</div>
