added a static asset

--- a/plugins/hello_world/frontend/views/hello_world/index.html.erb
+++ b/plugins/hello_world/frontend/views/hello_world/index.html.erb
@@ -1,5 +1,6 @@
 <div class="row-fluid">
    <div class="span3">
+     <%= image_tag('earth.jpg') %>
    </div>
    <div class="span9">
      <div class="row-fluid">
