WIP backend support for batch creation of locations

--- a/frontend/app/assets/stylesheets/archivesspace/tables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tables.less
@@ -92,3 +92,14 @@ table.table-sortable {
 .table-audit-cell {
   width: 100px;
 }
+
+table.table-spreadsheet {
+  width: 100%;
+  table-layout: fixed;
+
+  input[type="text"] {
+    width: 96%;
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+}
