WIP frontend changes for location batch form

--- a/frontend/app/assets/stylesheets/archivesspace/tables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tables.less
@@ -7,6 +7,10 @@ table {
     #gradient > .vertical(@navbarBackgroundHighlight, @navbarBackground);
     th {
       white-space: nowrap;
+
+      &.highlighted {
+        #gradient > .vertical(#f0f7fa, #dcf1fa);
+      }
     }
     .col {
       &.primary-type {
