Switch last_modified to system_mtime
Add a new 'user_mtime' to track modifications that were made by a user directly
modifying a record (as opposed to the system bumping system_mtime to encourage
reindexing)

--- a/frontend/app/views/shared/_pagination_summary.html.erb
+++ b/frontend/app/views/shared/_pagination_summary.html.erb
@@ -28,10 +28,10 @@
           </ul>
         </li>
         <li class="dropdown-submenu pull-left">
-          <%= link_to I18n.t("search_sorting.last_modified"), params_for_search("sort" => @search_data.sort_filter_for("last_modified", "desc")) %>
+          <%= link_to I18n.t("search_sorting.system_mtime"), params_for_search("sort" => @search_data.sort_filter_for("system_mtime", "desc")) %>
           <ul class="dropdown-menu">
-            <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "last_modified asc") %></li>
-            <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "last_modified desc") %></li>
+            <li><%= link_to I18n.t("search_sorting.asc"), params_for_search("sort" => "system_mtime asc") %></li>
+            <li><%= link_to I18n.t("search_sorting.desc"), params_for_search("sort" => "system_mtime desc") %></li>
           </ul>
         </li>
       </ul>
