Implement batch creation of location in the frontend (and tweak the backend to play nice)

--- a/frontend/app/assets/stylesheets/archivesspace/tables.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tables.less
@@ -36,6 +36,12 @@ table {
   dl {
     margin: 0;
   }
+  td {
+    &.error {
+      background-color: @errorBackground !important;
+      color: @errorText;
+    }
+  }
   .table-record-actions {
     .btn {
       white-space: nowrap;
