--- a/frontend/app/views/locations/edit.html.erb
+++ b/frontend/app/views/locations/edit.html.erb
@@ -10,6 +10,7 @@
         <div class="record-pane">
           <h2><%= @location.id %>  <span class="label label-info"><%= I18n.t("location._singular") %></span></h2>
           <br/>
+          <%= render :partial => "shared/form_messages", :locals => {:object => @subject, :form => form} %>
           <%= render :partial => "locations/form", :locals => {:form => form} %>
           <div class="form-actions">
             <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("location._singular") %></button>
