--- a/frontend/app/views/locations/new.html.erb
+++ b/frontend/app/views/locations/new.html.erb
@@ -10,7 +10,10 @@
         <div class="record-pane">
           <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("location._singular") %>  <span class="label label-info"><%= I18n.t("location._singular") %></span></h2>
           <br/>
+
+          <%= render :partial => "shared/form_messages", :locals => {:object => @subject, :form => form} %>
           <%= render :partial => "locations/form", :locals => {:form => form} %>
+
           <div class="form-actions">
             <div class="btn-group">
               <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("location._singular") %></button>
