--- a/frontend/app/views/search/_listing.html.erb
+++ b/frontend/app/views/search/_listing.html.erb
@@ -62,13 +62,13 @@
           <% end %>
         <% end %>
         <td>
-          <% if result['create_time'] and result['system_mtime'] %>
+          <% if result['create_time'] and result['user_mtime'] %>
             <small>
               <dl>
                 <dt><%= I18n.t("search_results.created") %></dt>
                 <dd><%= Time.parse(result['create_time']).getlocal %></dd>
                 <dt><%= I18n.t("search_results.modified") %></dt>
-                <dd><%= Time.parse(result['system_mtime']).getlocal %></dd>
+                <dd><%= Time.parse(result['user_mtime']).getlocal %></dd>
               </dl>
             </small>
           <% end %>
