Give all record forms a new CSS class 'aspace-record-form' and introduce update_monitor.js

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -8,7 +8,7 @@
 //= require subrecord.crud
 //= require archival_object.crud
 //= require rights_statements.crud
-//= require detect_form_changes
+//= require form
 //= require rde
 
 $(function() {
