--- a/frontend/app/views/digital_objects/_new.html.erb
+++ b/frontend/app/views/digital_objects/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @digital_object, :as => "digital_object", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+<%= form_for @digital_object, :as => "digital_object", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form'} do |f| %>
   <%= form_context :digital_object, @digital_object do |form| %>
     <div class="row-fluid">
       <div class="span12">
