--- a/frontend/app/views/locations/_new.html.erb
+++ b/frontend/app/views/locations/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @location, :as => "location", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+<%= form_for @location, :as => "location", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form'} do |f| %>
   <%= form_context :location, @location do |form| %>
     <%= hidden_field "inline", "true" %>
     <%= render :partial => "locations/form", :locals => {:form => form} %>
