--- a/frontend/app/assets/javascripts/digital_objects.crud.js.erb
+++ b/frontend/app/assets/javascripts/digital_objects.crud.js.erb
@@ -7,4 +7,4 @@
 //= require deaccessions.crud
 //= require subrecord.crud
 //= require rights_statements.crud
-//= require detect_form_changes
+//= require form
