--- a/frontend/app/views/accessions/new.html.erb
+++ b/frontend/app/views/accessions/new.html.erb
@@ -1,21 +1,19 @@
 <%= setup_context(:object => @accession) %>
 
-<div id="object_container">
-  <%= form_for @accession, :as => "accession", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
-    <%= form_context :accession, @accession do |form| %>
-      <div class="row-fluid">
-        <div class="span3">
-          <%= render :partial => "sidebar" %>
-        </div>
-        <div class="span9">
-          <%= render :partial => "shared/toolbar_new_records" %>
-          <div class="record-pane">
-            <%= link_to_help :topic => "accession" %>
-            <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("accession._singular") %> <span class="label label-info"><%= I18n.t("accession._singular") %></span></h2>
-            <%= render :partial => "accessions/form", :locals => {:form => form} %>
-          </div>
+<%= form_for @accession, :as => "accession", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form', :id => "accession_form"} do |f| %>
+  <%= form_context :accession, @accession do |form| %>
+    <div class="row-fluid">
+      <div class="span3">
+        <%= render :partial => "sidebar" %>
+      </div>
+      <div class="span9">
+        <%= render :partial => "shared/toolbar_new_records" %>
+        <div class="record-pane">
+          <%= link_to_help :topic => "accession" %>
+          <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("accession._singular") %> <span class="label label-info"><%= I18n.t("accession._singular") %></span></h2>
+          <%= render :partial => "accessions/form", :locals => {:form => form} %>
         </div>
       </div>
-    <% end %>
+    </div>
   <% end %>
-</div>
+<% end %>
