--- a/frontend/app/views/enumerations/_merge.html.erb
+++ b/frontend/app/views/enumerations/_merge.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @enumeration, :as => "enumeration", :url => {:action => :merge, :id => JSONModel(:enumeration).id_for(@enumeration["uri"])}, :html => {:class => 'form-horizontal', :id => "merge_enumeration"} do |f| %>
+<%= form_for @enumeration, :as => "enumeration", :url => {:action => :merge, :id => JSONModel(:enumeration).id_for(@enumeration["uri"])}, :html => {:class => 'form-horizontal aspace-record-form', :id => "merge_enumeration"} do |f| %>
   <%= form_context :enumeration, @enumeration do |form| %>
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal">×</button>
