--- a/frontend/app/views/repositories/new.html.erb
+++ b/frontend/app/views/repositories/new.html.erb
@@ -1,6 +1,6 @@
 <%= setup_context :object => JSONModel(:repository).new(@repository['repository']) %>
 
-<%= form_for @repository, :as => "repository", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+<%= form_for @repository, :as => "repository", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form'} do |f| %>
   <%= form_context :repository, @repository do |form| %>
     <div class="row-fluid">
       <div class="span3">
