--- a/frontend/app/views/resources/new.html.erb
+++ b/frontend/app/views/resources/new.html.erb
@@ -1,7 +1,7 @@
 <%= setup_context :object => @resource %>
 
 <div id="object_container">
-  <%= form_for @resource, :as => "resource", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "resource_form"} do |f| %>
+  <%= form_for @resource, :as => "resource", :url => {:action => :create}, :html => {:class => 'form-horizontal aspace-record-form', :id => "resource_form"} do |f| %>
     <%= form_context :resource, @resource do |form| %>
       <div class="row-fluid">
          <div class="span3">
