--- a/frontend/app/views/users/edit_groups.html.erb
+++ b/frontend/app/views/users/edit_groups.html.erb
@@ -4,7 +4,7 @@
   <div class="span12">
     <div class="record-pane">
       <h2><%= I18n.t("user._frontend.section.manage_access") %></h2>
-      <%= form_for @user, :as => "update_groups", :url => {:action => :update_groups}, :html => {:class => 'form-horizontal'} do |f| %>
+      <%= form_for @user, :as => "update_groups", :url => {:action => :update_groups}, :html => {:class => 'form-horizontal aspace-record-form'} do |f| %>
 
         <%= readonly_context :user, @user do |readonly| %>
           <%= readonly.label_and_textfield "username" %>
