WIP show a message in the sidebar and form_messages div when the update_monitor returns a not-ok status

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -223,6 +223,12 @@ h2 > .label {
   display: block;
 }
 
+.nav-list {
+  .alert-error a {
+    .transition(~"background-color 1s, color 1s");
+  }
+}
+
 .nav-list .form-actions {
   margin: 0;
   padding: 10px !important;
