--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -206,7 +206,7 @@ section h3 {
   display: block;
   *width: 190px;
   margin: 0 0 -1px;
-  padding: 8px 14px;
+  padding: 9px 14px 10px;
   border: 1px solid #e5e5e5;
 }
 .as-nav-list > li:first-child > a {
@@ -221,7 +221,7 @@ section h3 {
 .as-nav-list > .active > a {
   position: relative;
   z-index: 2;
-  padding: 9px 15px;
+  padding: 9px 14px 11px;
   border: 0;
   text-shadow: 0 1px 0 rgba(0,0,0,.15);
   -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
