WIP apply monitor_update chcking to all edit forms

--- a/frontend/app/views/agents/edit.html.erb
+++ b/frontend/app/views/agents/edit.html.erb
@@ -1,6 +1,6 @@
 <%= setup_context :object => @agent, :controller => :agents, :type => @agent.agent_type, :title => @agent.names[0]["sort_name"] %>
 
-<%= form_for @agent, :as => "agent", :url => {:action => :update}, :html => {:class => 'form-horizontal aspace-record-form', :id => "agent_form"} do |f| %>
+<%= form_for @agent, :as => "agent", :url => {:action => :update}, :html => {:class => 'form-horizontal aspace-record-form', :id => "agent_form"}.merge(update_monitor_params(@agent) do |f| %>
   <%= form_context :agent, @agent do |form| %>
     <div class="row-fluid">
       <div class="span3">
