--- a/frontend/app/views/classification_terms/_edit_inline.html.erb
+++ b/frontend/app/views/classification_terms/_edit_inline.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @classification_term, :as => "classification_term", :url => {:action => :update, :id => @classification_term.id}, :html => {:class => 'form-horizontal aspace-record-form', :id => 'classification_term_form'} do |f| %>
+<%= form_for @classification_term, :as => "classification_term", :url => {:action => :update, :id => @classification_term.id}, :html => {:class => 'form-horizontal aspace-record-form', :id => 'classification_term_form'}.merge(update_monitor_params(@classification_term) do |f| %>
   <%= form_context :classification_term, @classification_term do |form| %>
     <div class="row-fluid">
       <div class="span3">
