--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -1,6 +1,6 @@
 <%= setup_context :object => @subject, :title => @subject.title %>
 
-<%= form_for @subject, :as => "subject", :url => {:action => :update}, :html => {:class => 'form-horizontal aspace-record-form'} do |f| %>
+<%= form_for @subject, :as => "subject", :url => {:action => :update}, :html => {:class => 'form-horizontal aspace-record-form'}.merge(update_monitor_params(@subject) do |f| %>
   <%= form_context :subject, @subject do |form| %>
     <div class="row-fluid">
       <div class="span3">
