--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -193,3 +193,9 @@
     <%= I18n.t("update_monitor.other_editors", :user_ids => "${user_ids}") %>
   </div>
 --></div>
+
+<div id="as_nav_list_errors_item_template"><!--
+  <li class='alert-error update-monitor-error'>
+    <a href='#form_messages'><%= I18n.t("errors.sidebar_label") %> <span class='icon-chevron-right'></span></a>
+  </li>
+--></div>
