Sort agent/subject browse indexes by title by default; show a term form in the subject form by default; fix wrapping of buttons in the record-toolbar to still be contained by the styled-box

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -124,6 +124,10 @@ h2 > .label {
   }
 }
 
+.record-toolbar {
+  overflow: hidden;
+}
+
 .btn.btn-mini {
   [class^="icon-"], [class*=" icon-"] {
     margin-top: -1px;
