--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -20,7 +20,7 @@
             data-path="<%= data_path %>"
             data-name="<%= data_name %>"
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
-            data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.SUBJECT_FACETS %>"
+            data-browse-url="<%= url_for :controller => :search, :action => :do_search, :format => :js, :facets => SearchResultData.SUBJECT_FACETS, :sort => "title_sort asc" %>"
             data-selected="<%= selected_json %>"
             data-format_template="title"
             data-multiplicity="one"
